(foreman role) puppetize /etc/cron.d/foreman

--- a/hieradata/role/foreman.yaml
+++ b/hieradata/role/foreman.yaml
@@ -35,6 +35,56 @@ cron::job:
     user: "root"
     description: "restart foreman to control memory bloat"
 foreman_envsync::image_tag: "1.5.1"
+cron::job::multiple:
+  foreman:
+    environment:
+      - "SHELL=/bin/sh"
+      - "PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin"
+      - "RAILS_ENV=production"
+      - "FOREMAN_HOME=/usr/share/foreman"
+    jobs:
+      - description: "Clean up the session entries in the database"
+        minute: "15"
+        hour: "23"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake db:sessions:clear 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Send out recurring notifications"
+        minute: "0"
+        hour: "7"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake reports:daily 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Send out recurring notifications"
+        minute: "0"
+        hour: "5"
+        weekday: "0"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake reports:weekly 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Send out recurring notifications"
+        minute: "0"
+        hour: "3"
+        date: "1"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake reports:monthly 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Expire old reports"
+        minute: "30"
+        hour: "7"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake reports:expire 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Expire old audits"
+        minute: "0"
+        hour: "1"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake audits:expire 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Refreshes ldap usergroups. Can be disabled if you're not using LDAP authentication."
+        minute: "*/30"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake ldap:refresh_usergroups 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
+      - description: "Clean expired notifications"
+        minute: "0"
+        hour: "6"
+        weekday: "0"
+        user: "foreman"
+        command: "/usr/sbin/foreman-rake notifications:clean 2>&1 | gawk '{ print strftime(\"[\\%{literal('%')}Y-\\%{literal('%')}m-\\%{literal('%')}d \\%{literal('%')}H:\\%{literal('%')}M:\\%{literal('%')}S]\"), $0 }' >>/var/log/foreman/cron.log"
 r10k::mcollective: false
 r10k::cachedir: "/var/cache/r10k"
 r10k::sources:
