(hiera) use %{facts.os.*} instead of %{os.*}
This is to avoid a catalog compilation failure when a class uses `$os` as a
parameter.

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -7,35 +7,35 @@ hierarchy:
     datadir: "/etc/puppetlabs/code/hieradata/private/%{environment}"
     paths: &paths
       - "node/%{fqdn}.yaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}.yaml"
-      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily.yaml"
       - "site/%{site}/cluster/%{cluster}/role/%{role}.yaml"
       - "site/%{site}/cluster/%{cluster}.yaml"
-      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "cluster/%{cluster}/variant/%{variant}.yaml"
       - "cluster/%{cluster}/role/%{role}.yaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}.yaml"
       - "cluster/%{cluster}.yaml"
-      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "site/%{site}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/variant/%{variant}.yaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "site/%{site}/role/%{role}.yaml"
       - "site/%{site}.yaml"
-      - "role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "role/%{role}/osfamily/%{os.family}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "role/%{role}.yaml"
-      - "common/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "common/osfamily/%{os.family}.yaml"
+      - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/osfamily/%{facts.os.family}.yaml"
       - "common/virtual/%{virtual}.yaml"
       - "common.yaml"
   - name: "private hiera eyaml"
@@ -43,35 +43,35 @@ hierarchy:
     datadir: "/etc/puppetlabs/code/hieradata/private/%{environment}"
     paths:
       - "node/%{fqdn}.eyaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.eyaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}.eyaml"
-      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.eyaml"
-      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{os.family}.eyaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{facts.os.family}.eyaml"
       - "site/%{site}/cluster/%{cluster}/role/%{role}.eyaml"
       - "site/%{site}/cluster/%{cluster}.eyaml"
-      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.eyaml"
-      - "cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "cluster/%{cluster}/variant/%{variant}.eyaml"
       - "cluster/%{cluster}/role/%{role}.eyaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}/major/%{os.release.major}.eyaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}.eyaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}.eyaml"
       - "cluster/%{cluster}.eyaml"
-      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}.eyaml"
-      - "site/%{site}/variant/%{variant}/%{os.family}/major/%{os.release.major}.eyaml"
+      - "site/%{site}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "site/%{site}/variant/%{variant}.eyaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.eyaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}.eyaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}.eyaml"
       - "site/%{site}/role/%{role}.eyaml"
       - "site/%{site}.eyaml"
-      - "role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.eyaml"
-      - "role/%{role}/osfamily/%{os.family}.eyaml"
+      - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "role/%{role}/osfamily/%{facts.os.family}.eyaml"
       - "role/%{role}.eyaml"
-      - "common/osfamily/%{os.family}/major/%{os.release.major}.eyaml"
-      - "common/osfamily/%{os.family}.eyaml"
+      - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "common/osfamily/%{facts.os.family}.eyaml"
       - "common/virtual/%{virtual}.eyaml"
       - "common.eyaml"
     options:
