--- a/spec/fixtures/hiera.yaml
+++ b/spec/fixtures/hiera.yaml
@@ -12,34 +12,34 @@ hierarchy:
     datadir: "../../hieradata"
     paths:
       - "node/%{fqdn}.yaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/variant/%{variant}.yaml"
-      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily.yaml"
       - "site/%{site}/cluster/%{cluster}/role/%{role}.yaml"
       - "site/%{site}/cluster/%{cluster}.yaml"
-      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "cluster/%{cluster}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "cluster/%{cluster}/variant/%{variant}.yaml"
       - "cluster/%{cluster}/role/%{role}.yaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "cluster/%{cluster}/osfamily/%{os.family}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}.yaml"
       - "cluster/%{cluster}.yaml"
-      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}.yaml"
-      - "site/%{site}/variant/%{variant}/%{os.family}/major/%{os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "site/%{site}/variant/%{variant}.yaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "site/%{site}/role/%{role}/osfamily/%{os.family}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "site/%{site}/role/%{role}.yaml"
       - "site/%{site}.yaml"
-      - "role/%{role}/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "role/%{role}/osfamily/%{os.family}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "role/%{role}.yaml"
-      - "common/osfamily/%{os.family}/major/%{os.release.major}.yaml"
-      - "common/osfamily/%{os.family}.yaml"
+      - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/osfamily/%{facts.os.family}.yaml"
       - "common/virtual/%{virtual}.yaml"
       - "common.yaml"
