--- a/hieradata/role/foreman.yaml
+++ b/hieradata/role/foreman.yaml
@@ -174,7 +174,7 @@ puppet::server_jvm_extra_args: ["-XX:ReservedCodeCacheSize=1G", "-Djruby.logger.
 puppet::server::puppetdb::soft_write_failure: true
 puppet::server_puppetserver_version: &server_version "7.9.3"
 puppet::server_reports: "foreman,puppetdb"
-puppet::server_storeconfigs: false
+puppet::server_storeconfigs: true
 puppet::server: true
 puppet::server::puppetserver_metrics: false  # disabled for performance
 puppet::server::puppetserver_profiler: false  # disabled for performance
