(role/tang) add basic filtering

--- a/hieradata/role/tang.yaml
+++ b/hieradata/role/tang.yaml
@@ -1,6 +1,9 @@
 ---
 classes:
   - "profile::core::common"
+  - "profile::core::firewall"
   - "tang"
 packages:
   - "jose"
+
+firewall::ensure: "running"
