--- a/hieradata/site/tu.yaml
+++ b/hieradata/site/tu.yaml
@@ -2,62 +2,13 @@
 ipa::ipa_master_fqdn: "ipa1.tu.lsst.org"
 profile::core::common::disable_ipv6: true
 rsyslog::config::actions:
-# Send copy to logs to GKE Graylog instance
-  graylogCloud:
-    type: "omfwd"
-    facility: "*.*"
-    config:
-      Target: "collector.lsst.cloud"
-      Port: 5514
-      Protocol: "udp"
-# Send copy to logs to Base Graylog instance
-# This must be replaced once a TU graylog instance is set.
-  graylogTucson:
+  graylogtu:
     type: "omfwd"
     facility: "*.*"
     config:
       Target: "collector.tu.lsst.org"
       Port: 5514
       Protocol: "udp"
-  # Log anything (except mail) of level info or higher.
-  # Don't log private authentication messages!
-  #
-  # local6 is used for logs that should only be forwarded to a central log
-  # server and should never be stored locally. See IT-1734.
-  messages:
-    type: "omfile"
-    facility: "*.info;mail.none;authpriv.none;cron.none;local6.none"
-    config:
-      file: "/var/log/messages"
-  # The authpriv file has restricted access.
-  secure:
-    type: "omfile"
-    facility: "authpriv.*"
-    config:
-      file: "/var/log/secure"
-  # Everybody gets emergency messages
-  emerg:
-    type: "omusrmsg"
-    facility: "*.emerg"
-    config:
-      users: "*"
-  maillog:
-    type: "omfile"
-    facility: "mail.*"
-    config:
-      file: "-/var/log/maillog"
-  cron:
-    type: "omfile"
-    facility: "cron.*"
-    config:
-      file: "/var/log/cron"
-  # local7 does not appear to be used by CentOS 7, but for the sake of
-  # consistency we preserve it to match the CentOS configuration.
-  boot:
-    type: "omfile"
-    facility: "local7.*"
-    config:
-      file: "-/var/log/boot.log"
 # dhcp::dnsdomain requires an array but only uses the first element to set the domain
 dhcp::dnsdomain: &dnsdomains
   - "tu.lsst.org"
