--- a/hieradata/role/perfsonar.yaml
+++ b/hieradata/role/perfsonar.yaml
@@ -1,10 +1,10 @@
 ---
 classes:
+  - "ipset"
   - "ntp"
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::firewall"
-  - "profile::core::ipset"
   - "profile::core::perfsonar"
   - "profile::core::perfsonar::sysctl"
   - "profile::core::sysctl::rp_filter"
