--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -325,8 +325,7 @@ yum::manage_os_default_repos: true
 letsencrypt::email: "rubinobs-it-las@lsst.org"
 
 ipset::sets:
-  # rubin/aura "internal" prefixes
-  aura:
+  aura:  # rubin/aura "internal" prefixes
     ensure: "present"
     type: "hash:net"
     set:
@@ -334,8 +333,7 @@ ipset::sets:
       - "139.229.0.0/16"
       - "198.19.0.0/16"
       - "10.0.0.0/8"
-  # rubin "internal" prefixes
-  rubin:
+  rubin:  # rubin "internal" prefixes
     ensure: "present"
     type: "hash:net"
     set:
@@ -352,6 +350,11 @@ ipset::sets:
     type: "hash:net"
     set:
       - "139.229.144.0/26"
+  dev:  # dev site hosts
+    ensure: "present"
+    type: "hash:net"
+    set:
+      - "139.229.134.0/24"
 
 # sssd ipa client setup -- do not use on ipa servers
 sssd::main_config:
