--- a/hieradata/site/dev.yaml
+++ b/hieradata/site/dev.yaml
@@ -48,3 +48,12 @@ accounts::user_list:
 
 letsencrypt::server: "https://acme-staging.api.letsencrypt.org/directory"  # testing url
 profile::core::common::disable_ipv6: true
+
+profile::core::firewall::firewall:
+  "100 accept node_exporter":
+    proto: "tcp"
+    state: "NEW"
+    ipset: "ayekan src"
+    dport: "9100"
+    action: "accept"
+    require: "Ipset::Set[ayekan]"
