(*) Capitalize bare words used to ref class names
Resolves these errors:

```
Could not retrieve catalog from remote server: Error 500 on SERVER: Server Error: Invalid relationship: File[/etc/sudoers.d/perfsonar_sudo] { require => Class[perfsonar] }, because Class[perfsonar] doesn't seem to be in the catalog
```

```
Could not retrieve catalog from remote server: Error 500 on SERVER: Server Error: Invalid relationship: File[/etc/NetworkManager/dispatcher.d/50-eno1] { notify => Class[network] }, because Class[network] doesn't seem to be in the catalog
```

--- a/hieradata/role/perfsonar.yaml
+++ b/hieradata/role/perfsonar.yaml
@@ -56,7 +56,7 @@ files:
   # perfsonar packaging installs this one file with the wrong mode
   "/etc/sudoers.d/perfsonar_sudo":
     mode: "0440"
-    require: "Class[perfsonar]"
+    require: "Class[Perfsonar]"
 
 # The perfsonar class does not allow a pS version to be set.
 # The yumrepo mirror list used:
