(profile::core::gpio) fwv

--- a/site/profile/data/common.yaml
+++ b/site/profile/data/common.yaml
@@ -283,3 +283,6 @@ profile::core::dtn::sysctls:
 profile::core::dtn::packages:
   - "hwloc"
   - "hwloc-gui"
+
+profile::core::gpio::packages:
+  - "libgpiod-utils"
