(role/atshcu) include profile::core::gpio

--- a/hieradata/role/atshcu.yaml
+++ b/hieradata/role/atshcu.yaml
@@ -4,6 +4,7 @@ classes:
   - "profile::ccs::common"
   - "profile::ccs::graphical"  # Ultimately, next item should not be present, but people are currently using HCUs in graphical mode.
   - "profile::core::common"
+  - "profile::core::gpio"
   - "profile::core::nfsclient"
 
 packages:
