(profile::core::i2c) fwv

--- a/site/profile/data/common.yaml
+++ b/site/profile/data/common.yaml
@@ -286,3 +286,6 @@ profile::core::dtn::packages:
 
 profile::core::gpio::packages:
   - "libgpiod-utils"
+
+profile::core::i2c::packages:
+  - "i2c-tools"
