(common) disable rebooting when /boot/config.txt is updated
This is to prevent excessive restarting of production pis while the pi
related roles & profiles are refactored.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -548,3 +548,6 @@ profile::core::firewall::firewall:
 restic::bucket: "rubin-bm-backups/%{facts.fqdn}"
 restic::enable_backup: true
 restic::host: "s3.us-east-1.amazonaws.com"
+
+# XXX this should be removed when pi role/profile refactoring is complete
+profile::pi::config::reboot: false
