(role/ess) include profile::pi::ftdi

--- a/hieradata/role/ess.yaml
+++ b/hieradata/role/ess.yaml
@@ -5,6 +5,7 @@ classes:
   - "profile::core::gpio"
   - "profile::core::i2c"
   - "profile::pi::config"
+  - "profile::pi::ftdi"
 
 # disabling the kernel version check is needed on el7
 docker::overlay2_override_kernel_check: true
