--- a/hieradata/role/laserrpi.yaml
+++ b/hieradata/role/laserrpi.yaml
@@ -3,3 +3,6 @@ classes:
   - "profile::core::common"
   - "profile::core::docker"
   - "profile::core::gpio"
+  - "profile::pi::gpshat"
+
+profile::core::common::manage_chrony: false  # conflicts with profile::pi::gpshat
