(profile::core::gpio) restrict libgpiod-utils to el9
As this package is not present on el7.

--- a/site/profile/data/osfamily/RedHat/major/9.yaml
+++ b/site/profile/data/osfamily/RedHat/major/9.yaml
@@ -39,3 +39,6 @@ profile::core::docker::versionlock:
     ensure: "present"
     version: "2.17.3"
     release: *docker_release
+
+profile::core::gpio::packages:
+  - "libgpiod-utils"
