(common) pin el7/aarch64 to puppet agent 7.24.0
As 7.24.0 is the latest version of puppet that will be officially
packaged for el7/aarch64.

See http://yum.puppet.com/puppet7/el/7/aarch64/

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -34,6 +34,8 @@ hierarchy:
       - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "role/%{role}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}.yaml"
       - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "common/osfamily/%{facts.os.family}.yaml"
       - "common/virtual/%{virtual}.yaml"
@@ -70,6 +72,8 @@ hierarchy:
       - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "role/%{role}/osfamily/%{facts.os.family}.eyaml"
       - "role/%{role}.eyaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}.eyaml"
       - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.eyaml"
       - "common/osfamily/%{facts.os.family}.eyaml"
       - "common/virtual/%{virtual}.eyaml"
