--- a/spec/fixtures/hiera.yaml
+++ b/spec/fixtures/hiera.yaml
@@ -39,6 +39,8 @@ hierarchy:
       - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "role/%{role}/osfamily/%{facts.os.family}.yaml"
       - "role/%{role}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}.yaml"
       - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
       - "common/osfamily/%{facts.os.family}.yaml"
       - "common/virtual/%{virtual}.yaml"
