(cluster/{auxtel,lsstcam}-ccs) add new ccs releases

--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -108,6 +108,10 @@ ccs_software::installations:
     aliases:
       - "puppet-2.3.5"
 
+  ats-software-2.3.6:
+    aliases:
+      - "puppet-2.3.6"
+
 ## Used in lookups:
 ccs_site: "summit"
 ccs_instrument: "ats"
