--- a/hieradata/role/laserrpi.yaml
+++ b/hieradata/role/laserrpi.yaml
@@ -4,5 +4,6 @@ classes:
   - "profile::core::docker"
   - "profile::core::gpio"
   - "profile::pi::gpshat"
+  - "profile::pi::pigpio"
 
 profile::core::common::manage_chrony: false  # conflicts with profile::pi::gpshat
