--- a/hieradata/role/atshcu.yaml
+++ b/hieradata/role/atshcu.yaml
@@ -19,6 +19,7 @@ ccs_hcu::vldrive::version: "1.5.0"
 
 ccs_hcu::imanager::module: "imanager"
 ccs_hcu::imanager::version: "1.5.1"
+ccs_hcu::imanager: true
 
 nfs::client_enabled: true
 nfs::client_mounts:
