(site/ls/cluster/lsstcam-ccs) add new ccs release

--- a/hieradata/site/ls/cluster/lsstcam-ccs.yaml
+++ b/hieradata/site/ls/cluster/lsstcam-ccs.yaml
@@ -5,5 +5,10 @@ ccs_sal::dds_interface: "lsstcam-mcm-dds.ls.lsst.org"
 ## base-teststand-alerts
 ccs_software::service_email: "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
 
+ccs_software::installations:
+  lsstcam-software-1.0.8:
+    aliases:
+      - "puppet-1.0.8"
+
 ccs_monit::alert:
   - "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
