(site/ls/cluster/lsstcam-ccs) set DAQ version to R5-V8.1

--- a/hieradata/site/ls/cluster/lsstcam-ccs.yaml
+++ b/hieradata/site/ls/cluster/lsstcam-ccs.yaml
@@ -12,3 +12,5 @@ ccs_software::installations:
 
 ccs_monit::alert:
   - "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
+
+daq::daqsdk::version: "R5-V8.1"
