--- a/hieradata/cluster/rancher.yaml
+++ b/hieradata/cluster/rancher.yaml
@@ -3,3 +3,4 @@
 # apply to all of them.
 clustershell::groupmembers:
   rancher: {group: "rancher", member: "rancher[1-3]"}
+profile::core::rke::version: "1.4.6"
