(cluster/lsstcam-ccs) do not add instrument- prefix to ccs sal services

--- a/hieradata/cluster/lsstcam-ccs.yaml
+++ b/hieradata/cluster/lsstcam-ccs.yaml
@@ -23,6 +23,8 @@ sudo::configs:
 ccs_database::database: "ccsdbprod"
 
 ccs_sal::ospl_home: "/opt/OpenSpliceDDS/V6.10.4/HDE/x86_64.linux"
+## Do not add instrument- prefix to service names.
+ccs_sal::prefix_service: false
 ccs_sal::rpms:
   ts_sal_utils: "ts_sal_utils-7.4.0-1.x86_64.rpm"
 ccs_sal::rpms_private:
