--- a/.github/workflows/pr_labels.yaml
+++ b/.github/workflows/pr_labels.yaml
@@ -1,14 +1,21 @@
 ---
-name: "Pull Request Labels"
+# yamllint disable rule:quoted-strings
+name: Pull Request Labels
+
 "on":
   pull_request:
-    types: ["opened", "labeled", "unlabeled", "synchronize"]
+    types:
+      - opened
+      - labeled
+      - unlabeled
+      - synchronize
+
 jobs:
   label:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - uses: "mheap/github-action-required-labels@v3"
+      - uses: mheap/github-action-required-labels@v3
         with:
-          mode: "exactly"
+          mode: exactly
           count: 1
-          labels: "enhancement, bug, skip-changelog"
+          labels: enhancement, bug, skip-changelog
