--- a/hieradata/node/lsstcam-mcm.ls.lsst.org.yaml
+++ b/hieradata/node/lsstcam-mcm.ls.lsst.org.yaml
@@ -1,7 +1,8 @@
 ---
 ccs_software::services:
   prod:
-    - "mcm"
-    - "ocs-bridge"
+## Next two are handled by the ccs_sal module.
+#    - "mcm"
+#    - "ocs-bridge"
     - "cluster-monitor"
     - "lockmanager"
