(role/ccs-mcm) move common services here from mcm nodes
This moves mmm, cluster-monitor, lockmanager to the role.
On lsstcam-mcm.ls, it adds mmm (previously missing).
On lsstcam-mcm.cp, it adds all three (previously missing).

Affects nodes:
comcam-mcm.{cp,tu}
lsstcam-mcm.{cp,ls}

--- a/hieradata/role/ccs-mcm.yaml
+++ b/hieradata/role/ccs-mcm.yaml
@@ -20,3 +20,9 @@ profile::ccs::tomcat::wars:
 profile::core::systemd::tmpfile:
   docker_tmp.conf:  # XXX short term kludge
     content: "x /tmp/docker_tmp 0777 saluser saluser -"
+
+ccs_software::services:
+  prod:
+    - "mmm"
+    - "cluster-monitor"
+    - "lockmanager"
